--- a/README
+++ b/README
@@ -1,7 +1,20 @@
 == SMS Brasil
 
+Baseado no ActiveSMS (http://rubyforge.org/projects/activesms/) esse projeto visa manter e adicionar gateways brasileiros.
 
 == Gateways suportados
 
-- Human
+* Human[http://www.human.com.br]
+* BulkSMS[http://www.bulksms.com]
+* Clickatell[http://www.clickatell.com]
+* Simplewire[http://www.simplewire.com] (requires jruby)
 
+== Email carriers
+
+* Brasil (4)
+* US
+* Japão
+
+== Licença
+
+SMS Brasil is released under the MIT license.
