updated to newgem

--- a/History.txt
+++ b/History.txt
@@ -1,11 +1,18 @@
 === 0.6.6 / 2008-07-22
 
 * 1 major enhancement
-
   * Birthday! (ActiveSMS fork)
   
 === 0.7.7 / 2008-07-22
 
 * 1 major enhancement
-
   * Human Gateway Support Added
+  
+=== 0.8.0 / 2008-07-23
+
+* 1 major enhancement
+  * Added email adapter
+
+* 2 minor enhancement
+  * Updated gem stuff (newgem)
+  * Added gemspec 
